# alf-cli

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SORTING_GROUPING_KEYBINDINGS.md  clippy.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: check-semantic-pr.yml  ci.yml  linters.yml  main.yml  release.yml  unit-tests.yml
.husky/: post-commit  pre-commit  pre-push
.husky/hooks/: pre-commit
assets/: alf-cli-layout.drawio
examples/: sample_config.toml
src/: lib.rs  main.rs
src/cli/: config_cmd.rs  init.rs  init_tests.rs  mod.rs
src/config/: config_tests.rs  mod.rs
src/config/snapshots/: alf__config__config_tests__config_default_toml_format.snap  alf__config__config_tests__config_script_expansion_toml_format.snap
src/models/: mod.rs
src/parser/: mod.rs  parser_tests.rs
src/parser/snapshots/: alf__parser__parser_tests__concise_comment_format.snap  alf__parser__parser_tests__dot_notation_function_names.snap  alf__parser__parser_tests__empty_line_stops_multiline_comment.snap  alf__parser__parser_tests__mixed_comment_formats.snap  alf__parser__parser_tests__multiline_comment_format.snap  alf__parser__parser_tests__non_alf_comments_ignored.snap
src/search/: mod.rs  search_tests.rs
src/tui/: app.rs  app_tests.rs  events.rs  keybinds.rs  mock.rs  mod.rs  syntax.rs  theme_tests.rs  themes.rs  ui.rs
src/tui/app_tests/: filter.rs  group_mode_and_sort_order.rs  help_modal.rs  initial_state.rs  pending_key.rs  scroll.rs  search_mode.rs  select_entry.rs  selected_entry.rs  theme_cycling.rs  tick.rs
src/tui/keybinds/: global.rs  help.rs  keybind_tests.rs  mod.rs  normal.rs  search.rs
src/tui/state/: data.rs  data_tests.rs  filter.rs  filter_tests.rs  input.rs  input_tests.rs  mod.rs  navigation.rs  navigation_tests.rs  scroll.rs  search.rs  search_tests.rs  ui.rs  ui_state_tests.rs
src/tui/ui/: body.rs  colors.rs  help.rs  (+5 more)
tests/: app_tests.rs  config_tests.rs  data_tests.rs  filter_tests.rs  input_tests.rs  navigation_tests.rs  parser_tests.rs  search_state_tests.rs  search_tests.rs  theme_tests.rs  ui_state_tests.rs
tests/app_tests/: group_mode_and_sort_order.rs  mod.rs  navigation.rs  panel_cycling.rs  search_mode.rs  selected_entry.rs  tick.rs
tests/fixtures/: README.md  sample.bashrc  sample.zshrc
(+4 files in other folders)
