[package]
name = "alf"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.0"
authors = [ "Metal Gabe" ]
license = "MIT OR Apache-2.0"
description = "A smolderingly-nimble Rust TUI to rediscover your custom shell."
repository = "https://github.com/metal-gabe/alf-cli"
readme = "README.md"
keywords = [ "cli", "tui", "shell", "aliases", "functions" ]
categories = [ "command-line-utilities" ]

[[bin]]
name = "alf"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
nucleo-matcher = "0.3"
toml = "0.8"
directories = "5.0"
dirs = "5.0"
regex = "1.10"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"

  [dependencies.clap]
  version = "4.5"
  features = [ "derive", "cargo" ]

  [dependencies.syntect]
  version = "5.2"
  optional = true

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[dev-dependencies]
husky-rs = "0.2.2"
pretty_assertions = "1.4"
tempfile = "3.10"

  [dev-dependencies.insta]
  version = "1"
  features = [ "filters" ]

[features]
default = [ "syntax-highlighting" ]
syntax-highlighting = [ "syntect" ]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
